syntax = "proto3";
package DomainServices.DocumentOnSAService.StopSigning;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";

message StopSigningRequest {

	google.protobuf.Int32Value DocumentOnSAId = 1;
}